# Security-of-Information-Systems-for-Susu

./: .gitignore  CMakeLists.txt
lab1/: CMakeLists.txt  lab1.cc  lab1.ipynb  main.cc
lab2/: CMakeLists.txt  lab2.ipynb
lab2/client/: CMakeLists.txt  client.cc  client.h  command.cc  command.h  commandparser.cc  commandparser.h  main.cc  servercommunicator.cc  servercommunicator.h
lab4/: cyphers.py  lab4.py  test_cyphres.py
